# praktika_1

./: CMakeLists.txt  Enemy.hpp  Entity.hpp  Player.hpp  map.hpp  pac_man.cpp
